[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", features = ["framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-process = "1.4.0"